# streamripper

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_pyav_fix.py
examples/: basic_analysis.py  batch_analysis.py  config.yaml  multi_stream_demo.py
src/streamripper/: __init__.py  __main__.py  chart_generator.py  cli.py  py.typed  rtsp_analyzer.py
tests/: __init__.py  test_basic.py
